--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,7 @@
     "printWidth": 80,
     "tabWidth": 4,
     "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+    "endOfLine": "lf",
     "overrides": [
         {
             "files": "*.svelte",
